<resources>
    <string name="app_name">stravadiploma</string>

    <string name="onboarding_first_title"> Welcome to Ascent </string>
    <string name="onboarding_first_text"> Here you can monitor your weight and activities </string>

    <string name="onboarding_second_title"> Friends </string>
    <string name="onboarding_second_text"> Fill in the activity and weight fields, and then share the information with your friends </string>

    <string name="onboarding_third_title"> Activities </string>
    <string name="onboarding_third_text"> Convenient weight and activity tracking system-fill out your profile and start living brightly </string>
    <string name="on_boarding_skip">skip</string>

    <string name="okay">Okay</string>

    <string name="auth_login">Continue with Strava</string>
    <string name="auth_canceled">Аутентификация не выполнена</string>
    <string name="profile">Profile</string>
    <string name="activities">Activities</string>
    <string name="share">Share</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="logout">Logout</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="weight_edit">Weight(edit)</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="distance">Distance</string>
    <string name="time">Duration</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="add">Add</string>
    <string name="logoutMessage">Вы уверены, что хотите выйти? Все данные будут удалены</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="meters">Meters</string>
    <string name="should_be_filled">Fill the field</string>
    <string name="incorrect_format">Incorrect format</string>
    <string name="shareString"> Hi! I\'m using Strava. https://www.strava.com/athletes/ </string>
    <string name="list_is_empty_add_your_first_activity">List is empty! Add your first activity</string>
    <string name="need_to_login">Please login again. Your session is expired</string>

    <string-array name="sport_types">
    <item>AlpineSki</item>
    <item>Canoeing</item>
    <item>Crossfit</item>
    <item>EBikeRide</item>
    <item>Elliptical</item>
    <item>Golf</item>
    <item>Handcycle</item>
    <item>Hike</item>
    <item>IceSkate</item>
    <item>InlineSkate</item>
    <item>Kayaking</item>
    <item>Kitesurf</item>
    <item>NordicSki</item>
    <item>Ride</item>
    <item>RockClimbing</item>
    <item>RollerSki</item>
    <item>Rowing</item>
    <item>Run</item>
    <item>Windsurf</item>
    <item>Workout</item>
    <item>Yoga</item>
    <item>Wheelchair</item>
    <item>WeightTraining</item>
    <item>Walk</item>
    <item>VirtualRun</item>
    <item>VirtualRide</item>
    <item>Velomobile</item>
    <item>Swim</item>
    <item>Surfing</item>
    <item>StandUpPaddling</item>
    <item>StairStepper</item>
    <item>Soccer</item>
    <item>Snowshoe</item>
    <item>Snowboard</item>
    <item>Skateboard</item>
    <item>Sail</item>
</string-array>

</resources>