<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newActivityNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newActivityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="tesss"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="@id/guideline7"
            app:layout_constraintStart_toStartOf="@id/guideline6"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newActivityTypeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/newActivityNameLayout">

        <AutoCompleteTextView
            android:id="@+id/newActivityTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newActivityDateLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/newActivityTypeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newActivityDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/date"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="@id/guideline7"
            app:layout_constraintStart_toStartOf="@id/guideline6"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newActivityTimeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/newActivityDateLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newActivityTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/time"
            android:inputType="time"
            app:layout_constraintEnd_toEndOf="@id/guideline7"
            app:layout_constraintStart_toStartOf="@id/guideline6"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newActivityDistanceLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/newActivityTimeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newActivityDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meters"
            android:text="123"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@id/guideline7"
            app:layout_constraintStart_toStartOf="@id/guideline6"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newActivityDescriptionLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/newActivityDistanceLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newActivityDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="@id/guideline7"
            app:layout_constraintStart_toStartOf="@id/guideline6"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/newActivityAddButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/newActivityDescriptionLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>