<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mainInfoCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="@color/black"
            app:cardElevation="24dp"
            app:cardMaxElevation="36dp"
            app:contentPadding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_profile_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/guideline5"
                app:layout_constraintStart_toStartOf="@id/guideline4"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/name_avatar_constraint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/userAvatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/round_outline"
                        android:cropToPadding="true"
                        android:outlineProvider="none"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/userName"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="center|start"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@id/userAvatar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/userAvatar"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Ivanov Ivan" />

                    <TextView
                        android:id="@+id/user_nickname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="center|start"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/userAvatar"
                        app:layout_constraintTop_toBottomOf="@id/userName"
                        tools:text="userNickName" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_avatar_constraint">

                    <LinearLayout
                        android:id="@+id/followers_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following" />

                        <TextView
                            android:id="@+id/following_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="1123" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/followers_layout"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers" />

                        <TextView
                            android:id="@+id/followers_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="23" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/share_profile_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/additionalInfoCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            app:cardElevation="24dp"
            app:cardMaxElevation="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainInfoCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/additional_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="20dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    app:layout_constraintEnd_toEndOf="@id/guideline11"
                    app:layout_constraintStart_toStartOf="@id/guideline10"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/HeaderStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/genderTextView"
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        tools:text="Male" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/HeaderStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/country" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/countryTextView"
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        tools:text="Russia" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/weight_edit">

                        <AutoCompleteTextView
                            android:id="@+id/weightTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            tools:ignore="LabelFor"
                            tools:text="50 kg" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/loadingProfileProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="@id/guideline9"
            app:layout_constraintStart_toStartOf="@id/guideline8"
            app:layout_constraintTop_toBottomOf="@id/additionalInfoCardView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="80dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="80dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
